src/objects/Category_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Article_Ids__c</fullName>
        <description>Article Id&apos;s in this field will be updated by Peak TSE team</description>
        <label>Article Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category values are fetched from Case Object Category</description>
        <label>Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This field will be populated by TSE Peak team for given Category and Sub Category. 
During Case creation TSE selects Cat and Sub-Cat, a comment will be created under Case related list.</description>
        <inlineHelpText>This field will be populated by TSE Peak team for given Category and Sub Category. 
During Case creation TSE selects Cat and Sub-Cat, a comment will be created under Case related list.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>The Sub Category will be fetched from the field Sub Category of Case Object.</description>
        <label>Sub Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Category Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Combinations</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Combinations</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Category Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>